MailZu-ng 0.12.mailzu-ng-php72-f34abbd+1 (13.12.2022)
---------
  - In langs.php changed the translate function to return a marked string if a translation does
    not exist instead of a question mark.
  - Removed the function to translate emails.
  - In en_US.lang.php removed references to phpScheduleIT. Removed unused translations to the best
    of my ability. Tabulated things for readbility. Added the necessary translation for the new DA
    list functionality.

MailZu-ng 0.12.mailzu-ng-php72-2f24e0b+1 (13.12.2022)
---------
  - Merged administrators.
  - Added braces to a foreach loop of the cleanRow function to avoid issues if code gets added to
    that loop at a later date.
  - Added the functions necessary for the future DA list functionality. Rewrote convertSearch2SQl
    so that it can handle "begins_with", "not_begin_with", "ends_with" and "not_end_with" searches.
  - Also generalised the function to accept array values as criterion value as well as just a single
    value. This is required to deal with the idiosyncracies of the internal DA list representations.

MailZu-ng 0.12.mailzu-ng-php72-f47fb6d+1 (13.12.2022)
---------
  - Merged administrators.
  - Renamed the function s_admin to isAdmin and updated the code to check the merged administrators.
  - Removed the function isMailAdmin. Fixed the COOKIE login process to recover missing data from
    the users table. It used to set all variables to the COOKIE_ID.
  - Added a cookie timeout configuration variable.
  - Fixed some translations and added some where there were none.
  - Added synchronisaton code for the users database. When a user logs in the users table entries
    are brought in line with the data that came from the authentication system.

MailZu-ng 0.12.mailzu-ng-php72-2d9503b+1 (13.12.2022)
---------
  - Added 'lib/Priority.php' to the file list in composer.json.

MailZu-ng 0.12.mailzu-ng-php72-cdd1e6e+1 (13.12.2022)
---------