@@ -1,0 +1,9 @@
+[Unit]
+Description		= Amavis/MailZu email quarantine reporting service to end-users
+Documentation		= /usr/share/mailzu/docs/SCRIPTS_README
+After			= mariadb.service
+
+[Service]
+Type			= oneshot
+ExecStart		= /usr/share/mailzu/scripts/mailzu-db-reporting.sh
+SyslogIdentifier	= mailzu-db-reporting
